# HaiShop

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
core/domain/: __init__.py  aggregates.py  base.py  events.py  exceptions.py  repositories.py  value_objects.py
core/infrastructure/: __init__.py  api_view.py  cache.py  exception_handler.py  response.py  transaction.py
haishop/: asgi.py  settings.py  urls.py  wsgi.py
haishop/config/: __init__.py  base.py  development.py  env.example  env.py  production.py  testing.py
products/: models.py  urls.py
products/api/: __init__.py  exception_handlers.py  serializers.py  urls.py  views.py
products/application/: __init__.py  commands.py  dtos.py  product_service.py  queries.py
products/domain/: __init__.py  aggregates.py  config.py  entities.py  events.py  repositories.py  services.py  value_objects.py
products/infrastructure/: factory.py
products/infrastructure/models/: product_models.py
products/infrastructure/repositories/: django_category_repository.py  django_product_repository.py
products/infrastructure/services/: cache_manager.py  django_search_service.py  inventory_lock_service.py
products/migrations/: 0001_initial.py
